# AICustomerService

./: .env.example  .gitignore  AGENTS.md  README.md  Readme.txt
backend/: pyproject.toml
backend/app/: __init__.py  agent_audit.py  avatar_generation.py  config.py  conversation_memory.py  dev_check.py  evaluations.py  knowledge_base.py  llm.py  llm_middleware.py  llm_usage.py  logging_config.py  main.py  map_tools.py  player_data.py  prompt_registry.py  safety.py  schemas.py  structured_output_repair.py  table_adapter.py
backend/app/agent/: __init__.py  audit.py  checkpoint.py  context_budget.py  customer_service.py  decision.py  map_agent.py  planner.py  policies.py  prompting.py  state.py  streaming.py  trace.py
backend/app/rag/: __init__.py  chroma_store.py  local_vector.py  (+1 more)
backend/tests/: conftest.py  fakes.py  test_agent_audit.py  test_agent_checkpoint.py  test_agent_knowledge_workflow.py  test_agent_map_workflow.py  test_agent_mysql_workflow.py  test_agent_trace.py  test_agent_workflow.py  test_avatar_generation.py  test_chat.py  test_context_budget.py  test_conversation_memory.py  test_dev_check.py  test_evaluations.py  test_knowledge_base.py  test_llm_agent_workflow.py  test_llm_decision.py  test_llm_middleware.py  test_llm_provider.py  test_llm_stream.py  test_llm_usage.py  test_logging_config.py  test_map_agent.py  test_map_tools.py  test_planner.py  test_player_data.py  test_prompt_registry.py  test_rag.py  test_safety.py  test_structured_output_repair.py  test_table_adapter.py  test_tool_executor.py  test_tool_registry.py  test_vector_health.py
(+33 files in other folders)
