[project]
name = "customer-service-agent-backend"
version = "0.1.0"
description = "FastAPI backend for the game customer service AI Agent."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.4.0",
    "httpx>=0.27.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "pymysql>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
